--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #464a52;
+  color: #fff;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.tasks-count {
+  margin: 0;
+  color: #538dff;
+}
+
+.task-input {
+  padding: 10px;
+  border: 1px solid #464a52;
+  border-radius: 2px;
+}
+.button {
+  background-color: #538dff;
+  border-radius: 2px;
+  padding: 11px;
+  border: none;
+  color: #fff;
+  /* font-weight: bold; */
+}
+hr {
+  border: 0.1px solid #fff;
+}
+
+.task-input:focus,
+.button:focus {
+  outline: none;
+}
+
+#Layer,
+#Layer_1,
+#Capa_1 {
+  fill: white;
+}
+
+/* @media all and (min-width: 960px) and (max-width: 1280px) {
+  #separator {
+    width: 1120px;
+  }
+}
+
+@media all and (max-width: 950px) {
+  #separator {
+    width: 520px;
+  }
+} */
