--- a/src/index.css
+++ b/src/index.css
@@ -42,19 +42,29 @@ hr {
 }
 
 #Layer,
-#Layer_1,
 #Capa_1 {
   fill: white;
 }
-
-/* @media all and (min-width: 960px) and (max-width: 1280px) {
-  #separator {
-    width: 1120px;
-  }
+#Layer_1 {
+  fill: #87898a;
+}
+#Layer_1:hover {
+  cursor: pointer;
+  fill: #fff;
 }
 
-@media all and (max-width: 950px) {
-  #separator {
-    width: 520px;
-  }
-} */
+.delete_opt {
+  position: absolute;
+  right: 0;
+}
+
+.link {
+  font-weight: 100;
+  color: #fff;
+}
+
+.link:hover {
+  font-weight: 100;
+  color: #fff;
+  text-decoration: none;
+}
