--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,13 @@ hr {
   color: #fff;
   text-decoration: none;
 }
+
+.dribbble {
+  color: #538dff;
+}
+
+.foot1 {
+  display: block;
+  text-align: center;
+  padding-top: 3cm;
+}
